--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-CA">
-<head>
+<head><script>if(location.hostname==="waterspritelake-ca.pages.dev"){location.replace("https://waterspritelake.ca"+location.pathname+location.search)}</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About Water Sprite Lake: Purpose, Sources, Approach</title>
