--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </tbody>
 </table>
 </div>
-<p>The table above provides a snapshot of key planning factors for your Water Sprite Lake trail hike. These figures are approximate and can vary based on your chosen route, fitness level, weather, and time of year. The 16-kilometre round trip typically takes a full day for fit hikers moving at a steady pace, though many choose to camp overnight to reduce time pressure and enjoy the alpine environment more fully. The elevation gain of 800 to 900 metres is significant and sustained, requiring good cardiovascular fitness and appropriate footwear. Always verify current trail conditions, road access, and weather forecasts before departing, as alpine environments in British Columbia are dynamic and can present hazards even in summer months.</p>
+<p>The table above provides a snapshot of key planning factors for your Water Sprite Lake trail hike. These figures are approximate and can vary based on your chosen route, fitness level, weather, and time of year. The 16-kilometre round trip typically takes a full day for fit hikers moving at a steady pace, though many choose to camp overnight to reduce time pressure and enjoy the alpine environment more fully. The elevation gain of 800 to 900 metres is significant and sustained, requiring good cardiovascular fitness and appropriate footwear. You can also check out the <a href="https://goldenpandacasino.ca/">Golden Panda Casino App</a> for a fun way to relax after your hike! Always verify current trail conditions, road access, and weather forecasts before departing, as alpine environments in British Columbia are dynamic and can present hazards even in summer months.</p>
 </section>
 
 <section id="route-overview">
